district summary complete

--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -184,19 +184,20 @@
        "15"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the total number of unique schools\n",
-    "school_count = "
+    "school_count = school_data_complete[\"school_name\"].nunique()\n",
+    "school_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -205,19 +206,20 @@
        "39170"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the total number of students\n",
-    "student_count = "
+    "student_count = school_data_complete[\"Student ID\"].nunique()\n",
+    "student_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -226,19 +228,21 @@
        "24649428"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the total budget\n",
-    "total_budget = "
+    "total_budget = school_data_complete[\"budget\"].unique()\n",
+    "total_budget_sum = total_budget.sum()\n",
+    "total_budget_sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -247,19 +251,20 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the average (mean) math score\n",
-    "average_math_score = "
+    "average_math_score = school_data_complete[\"math_score\"].mean()\n",
+    "average_math_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -268,19 +273,20 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the average (mean) reading score\n",
-    "average_reading_score = "
+    "average_reading_score = school_data_complete[\"reading_score\"].mean()\n",
+    "average_reading_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +295,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,18 +309,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85.80546336482001"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate the percentage of students who passeed reading (hint: look at how the math percentage was calculated)  \n",
-    "passing_reading_count = \n",
-    "passing_reading_percentage = "
+    "passing_reading_count = school_data_complete[(school_data_complete[\"reading_score\"]>= 70)].count()[\"student_name\"]\n",
+    "passing_reading_percentage = passing_reading_count / float(student_count) * 100\n",
+    "passing_reading_percentage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +341,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -397,14 +415,17 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a high-level snapshot of the district's key metrics in a DataFrame\n",
-    "district_summary = \n",
+    "district_summary = pd.DataFrame({\"Total Schools\": [school_count], \"Total Students\": [student_count], \"Total Budget\": [total_budget_sum],\n",
+    "                                 \"Average Math Score\": [average_math_score], \"Average Reading Score\": [average_reading_score], \n",
+    "                                 \"% Passing Math\": [passing_math_percentage], \"% Passing Reading\": [passing_reading_percentage], \n",
+    "                                \"% Overall Passing\": [overall_passing_rate]})\n",
     "\n",
     "# Formatting\n",
     "district_summary[\"Total Students\"] = district_summary[\"Total Students\"].map(\"{:,}\".format)\n",
