rubric editing, complete code

--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -1054,8 +1054,8 @@
    ],
    "source": [
     "# Sort the schools by `% Overall Passing` in descending order and display the top 5 rows.\n",
-    "high_perform_schools = per_school_summary.sort_values([\"% Overall Passing\"], ascending=False)\n",
-    "high_perform_schools.head()"
+    "top_schools = per_school_summary.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "top_schools.head()"
    ]
   },
   {
@@ -1220,8 +1220,8 @@
    ],
    "source": [
     "# Sort the schools by `% Overall Passing` in ascending order and display the top 5 rows.\n",
-    "bottom_perform_schools = per_school_summary.sort_values([\"% Overall Passing\"], ascending=True)\n",
-    "bottom_perform_schools.head()"
+    "bottom_schools = per_school_summary.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "bottom_schools.head()"
    ]
   },
   {
